Collection tree saved

--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -12,3 +12,5 @@ tree:
     children:
       -
         entry: 31d8538c-f7a8-4453-b84c-4ff46a54436b
+      -
+        entry: 07716674-15e5-4e31-bd0c-36d6aed4cf75
