--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -14,3 +14,5 @@ tree:
         entry: 31d8538c-f7a8-4453-b84c-4ff46a54436b
       -
         entry: 07716674-15e5-4e31-bd0c-36d6aed4cf75
+      -
+        entry: 1fcbb04c-96ef-4e05-b097-b5c138790dd8
