Collection tree saved

--- a/content/trees/navigation/navigation.yaml
+++ b/content/trees/navigation/navigation.yaml
@@ -1,22 +1,20 @@
 tree:
-  -
-    id: 083cd0d2-b513-450c-81ba-7e36dced04a9
+  - id: 083cd0d2-b513-450c-81ba-7e36dced04a9
     title: Services
     url: '#'
     children:
-      -
-        id: 3b4e5abb-251b-4ad2-8025-eb38868712fa
+      - id: 3b4e5abb-251b-4ad2-8025-eb38868712fa
         title: '01. The Evolved Executive'
         url: 'entry::31d8538c-f7a8-4453-b84c-4ff46a54436b'
-  -
-    id: 14e67cc8-6ae8-4252-8eed-67f556f83360
+  - id: 14e67cc8-6ae8-4252-8eed-67f556f83360
     title: 'Our Work'
     url: /our-work
-  -
-    id: 2c46c715-014f-46a7-b0e2-884a368c2836
+  - id: 2c46c715-014f-46a7-b0e2-884a368c2836
     title: About
     url: /about
-  -
-    id: cb0828c5-6c8c-41d8-8418-7e730883fbf2
+  - id: cb0828c5-6c8c-41d8-8418-7e730883fbf2
     title: Contact
     url: /contact
+  - id: cb0828c5-6c8c-41d8-8418-7e730883fbf5
+    title: Get Started
+    url: 'https://calendly.com/holisticsolutionswithbrianna/organizational-consultation'
