--- a/resources/fieldsets/blocks.yaml
+++ b/resources/fieldsets/blocks.yaml
@@ -290,176 +290,6 @@ fields:
                 icon: textarea
                 listable: hidden
                 instructions_position: above
-        featured_case_study:
-          display: 'Featured Case Study'
-          fields:
-            -
-              handle: background_color
-              field: common.background_color
-            -
-              handle: text_color
-              field: common.text_color
-            -
-              handle: section_title
-              field:
-                input_type: text
-                antlers: false
-                display: 'Section Title'
-                type: text
-                icon: text
-                listable: hidden
-                instructions_position: above
-            -
-              handle: section_headline
-              field:
-                input_type: text
-                antlers: false
-                display: 'Section Headline'
-                type: text
-                icon: text
-                listable: hidden
-                instructions_position: above
-            -
-              handle: icon
-              field:
-                mode: list
-                container: assets
-                folder: content
-                restrict: false
-                allow_uploads: true
-                show_filename: true
-                max_files: 1
-                display: Icon
-                type: assets
-                icon: assets
-                listable: hidden
-                instructions_position: above
-            -
-              handle: description
-              field:
-                antlers: false
-                display: Description
-                type: textarea
-                icon: textarea
-                listable: hidden
-                instructions_position: above
-            -
-              handle: insights
-              field:
-                collapse: false
-                sets:
-                  insight:
-                    display: Insight
-                    fields:
-                      -
-                        handle: headline
-                        field:
-                          input_type: text
-                          antlers: false
-                          display: Headline
-                          type: text
-                          icon: text
-                          listable: hidden
-                          instructions_position: above
-                      -
-                        handle: image
-                        field:
-                          mode: list
-                          container: assets
-                          folder: content
-                          restrict: false
-                          allow_uploads: true
-                          show_filename: true
-                          max_files: 1
-                          display: Image
-                          type: assets
-                          icon: assets
-                          listable: hidden
-                          instructions_position: above
-                      -
-                        handle: description
-                        field:
-                          input_type: text
-                          antlers: false
-                          display: Description
-                          type: text
-                          icon: text
-                          listable: hidden
-                          instructions_position: above
-                display: Insights
-                type: replicator
-                icon: replicator
-                listable: hidden
-                instructions_position: above
-            -
-              handle: button_text
-              field:
-                input_type: text
-                antlers: false
-                display: 'Button Text'
-                type: text
-                icon: text
-                width: 33
-                listable: hidden
-            -
-              handle: button_url
-              field:
-                display: 'Button URL'
-                type: link
-                icon: link
-                width: 66
-                listable: hidden
-            -
-              handle: button_theme
-              field:
-                placeholder: primary
-                options:
-                  primary: Primary
-                  secondary: Secondary
-                  tertiary: Tertiary
-                multiple: false
-                max_items: 1
-                clearable: false
-                searchable: true
-                taggable: false
-                push_tags: false
-                cast_booleans: false
-                display: 'Button Theme'
-                type: select
-                icon: select
-                width: 50
-                listable: hidden
-                instructions_position: above
-                default: primary
-            -
-              handle: button_horizontal_position
-              field:
-                options:
-                  left: Left
-                  center: Center
-                  right: Right
-                display: 'Button Horizontal Position'
-                type: button_group
-                icon: button_group
-                width: 50
-                listable: hidden
-            -
-              handle: open_in_new_window
-              field:
-                display: 'Open in new window?'
-                type: toggle
-                icon: toggle
-                listable: hidden
-                width: 50
-            -
-              handle: include_button_arrow
-              field:
-                default: false
-                display: 'Include Button Arrow?'
-                type: toggle
-                icon: toggle
-                width: 50
-                listable: hidden
         full_width_cta:
           display: 'Full Width CTA'
           fields:
@@ -745,117 +575,6 @@ fields:
                 type: replicator
                 icon: replicator
                 listable: hidden
-        team:
-          display: Team
-          fields:
-            -
-              handle: section_headline
-              field:
-                input_type: text
-                antlers: false
-                display: 'Section Headline'
-                type: text
-                icon: text
-                listable: hidden
-            -
-              handle: team_members
-              field:
-                collapse: false
-                sets:
-                  team_member:
-                    display: 'Team Member'
-                    fields:
-                      -
-                        handle: photo
-                        field:
-                          mode: list
-                          container: assets
-                          folder: content/team
-                          restrict: false
-                          allow_uploads: true
-                          show_filename: true
-                          max_files: 1
-                          display: Photo
-                          type: assets
-                          icon: assets
-                          listable: hidden
-                      -
-                        handle: name
-                        field:
-                          input_type: text
-                          antlers: false
-                          display: Name
-                          type: text
-                          icon: text
-                          listable: hidden
-                      -
-                        handle: title_or_role
-                        field:
-                          input_type: text
-                          antlers: false
-                          display: 'Title or Role'
-                          type: text
-                          icon: text
-                          listable: hidden
-                      -
-                        handle: description
-                        field:
-                          antlers: false
-                          display: Description
-                          type: textarea
-                          icon: textarea
-                          listable: hidden
-                      -
-                        handle: url
-                        field:
-                          display: URL
-                          type: link
-                          icon: link
-                          instructions: 'This could be linkedin, website, portfolio, etc.'
-                          listable: hidden
-                display: 'Team Members'
-                type: replicator
-                icon: replicator
-                listable: hidden
-        add_ons:
-          display: 'Add ons'
-          fields:
-            -
-              handle: background_color
-              field: common.background_color
-            -
-              handle: text_color
-              field: common.text_color
-            -
-              handle: image
-              field:
-                mode: list
-                container: assets
-                folder: content
-                restrict: false
-                allow_uploads: true
-                show_filename: true
-                max_files: 1
-                display: Image
-                type: assets
-                icon: assets
-                listable: hidden
-            -
-              handle: section_headline
-              field:
-                input_type: text
-                antlers: false
-                display: 'Section Headline'
-                type: text
-                icon: text
-                listable: hidden
-            -
-              handle: list
-              field:
-                display: List
-                type: list
-                icon: list
-                listable: hidden
         featured_articles:
           display: 'Featured Articles'
           fields:
@@ -928,54 +647,23 @@ fields:
                   - orderedlist
                   - quote
                   - anchor
-        all_articles:
-          display: 'All articles'
+        service_cards:
+          display: 'Service Cards'
           fields:
             -
-              handle: collections
+              handle: services
               field:
-                max_items: 1
                 mode: default
-                display: Collections
-                type: collections
-                icon: collections
-                instructions: 'Which collection would you like to include in listing all articles from?'
+                create: true
+                collections:
+                  - pages
+                display: Services
+                type: entries
+                icon: entries
                 listable: hidden
                 instructions_position: above
-        sticky_in_page_nav:
-          display: 'Sticky In-Page Nav'
-          fields:
-            -
-              handle: links
-              field:
-                collapse: false
-                sets:
-                  link:
-                    display: Link
-                    fields:
-                      -
-                        handle: text
-                        field:
-                          input_type: text
-                          antlers: false
-                          display: Text
-                          type: text
-                          icon: text
-                          listable: hidden
-                          instructions_position: above
-                      -
-                        handle: link
-                        field:
-                          display: Link
-                          type: link
-                          icon: link
-                          listable: hidden
-                          instructions_position: above
-                display: Links
-                type: replicator
-                icon: replicator
-                listable: hidden
-                instructions_position: above
+                visibility: visible
+                always_save: false
       display: Blocks
       type: replicator
       icon: replicator
