--- a/resources/fieldsets/common.yaml
+++ b/resources/fieldsets/common.yaml
@@ -1,6 +1,7 @@
 title: Common
 fields:
-  - handle: bard
+  -
+    handle: bard
     field:
       always_show_set_button: false
       buttons:
@@ -33,19 +34,24 @@ fields:
         articles:
           display: Articles
           fields:
-            - handle: accent_color
+            -
+              handle: accent_color
               field:
                 colors:
-                  - label: 'Accent 1'
+                  -
+                    label: 'Accent 1'
                     value:
                       - '#00cb93'
-                  - label: 'Accent 2'
+                  -
+                    label: 'Accent 2'
                     value:
                       - '#cb8900'
-                  - label: 'Accent 3'
+                  -
+                    label: 'Accent 3'
                     value:
                       - '#cb00c1'
-                  - label: 'Accent 4'
+                  -
+                    label: 'Accent 4'
                     value:
                       - '#57aeff'
                 display: 'Accent Color'
@@ -55,7 +61,8 @@ fields:
                 width: 50
                 instructions_position: above
                 default: 'Accent 1'
-            - handle: headline
+            -
+              handle: headline
               field:
                 input_type: text
                 antlers: false
@@ -64,7 +71,8 @@ fields:
                 icon: text
                 listable: hidden
                 width: 50
-            - handle: articles
+            -
+              handle: articles
               field:
                 display: Articles
                 type: section
@@ -72,7 +80,8 @@ fields:
                 instructions: 'You can either select individual articles or pull in articles by category'
                 listable: hidden
                 instructions_position: above
-            - handle: articles
+            -
+              handle: articles
               field:
                 mode: default
                 create: true
@@ -83,7 +92,8 @@ fields:
                 icon: entries
                 listable: hidden
                 instructions_position: above
-            - handle: articles_by_category
+            -
+              handle: articles_by_category
               field:
                 max_items: 1
                 mode: default
@@ -95,7 +105,8 @@ fields:
                 icon: taxonomy
                 listable: hidden
                 instructions_position: above
-            - handle: view_more_articles_cta_text
+            -
+              handle: view_more_articles_cta_text
               field:
                 input_type: text
                 antlers: false
@@ -104,7 +115,8 @@ fields:
                 icon: text
                 listable: hidden
                 instructions_position: above
-            - handle: view_more_articles_link
+            -
+              handle: view_more_articles_link
               field:
                 display: 'View More Articles Link'
                 type: link
@@ -114,14 +126,16 @@ fields:
         blockquote:
           display: Blockquote
           fields:
-            - handle: quote
+            -
+              handle: quote
               field:
                 antlers: false
                 display: Quote
                 type: textarea
                 icon: textarea
                 listable: hidden
-            - handle: align_quote_to_side_of_content
+            -
+              handle: align_quote_to_side_of_content
               field:
                 default: false
                 display: 'Align Quote to Side of Content'
@@ -130,7 +144,8 @@ fields:
                 instructions: 'By default quote is larger and full width, this will let you specify which side you want the quote on.'
                 width: 50
                 listable: hidden
-            - handle: quote_author
+            -
+              handle: quote_author
               field:
                 input_type: text
                 antlers: false
@@ -141,7 +156,8 @@ fields:
                 instructions_position: above
                 visibility: visible
                 always_save: false
-            - handle: quote_alignment
+            -
+              handle: quote_alignment
               field:
                 options:
                   left: Left
@@ -157,7 +173,8 @@ fields:
         button:
           display: Button
           fields:
-            - handle: button_text
+            -
+              handle: button_text
               field:
                 input_type: text
                 antlers: false
@@ -166,14 +183,16 @@ fields:
                 icon: text
                 width: 33
                 listable: hidden
-            - handle: button_url
+            -
+              handle: button_url
               field:
                 display: 'Button URL'
                 type: link
                 icon: link
                 width: 66
                 listable: hidden
-            - handle: button_theme
+            -
+              handle: button_theme
               field:
                 placeholder: primary
                 options:
@@ -194,7 +213,8 @@ fields:
                 listable: hidden
                 instructions_position: above
                 default: primary
-            - handle: button_horizontal_position
+            -
+              handle: button_horizontal_position
               field:
                 options:
                   left: Left
@@ -205,14 +225,16 @@ fields:
                 icon: button_group
                 width: 50
                 listable: hidden
-            - handle: open_in_new_window
+            -
+              handle: open_in_new_window
               field:
                 display: 'Open in new window?'
                 type: toggle
                 icon: toggle
                 listable: hidden
                 width: 50
-            - handle: include_button_arrow
+            -
+              handle: include_button_arrow
               field:
                 default: false
                 display: 'Include Button Arrow?'
@@ -223,11 +245,14 @@ fields:
         cta_with_form:
           display: 'CTA with Form'
           fields:
-            - handle: background_color
+            -
+              handle: background_color
               field: common.background_color
-            - handle: text_color
+            -
+              handle: text_color
               field: common.text_color
-            - handle: headline
+            -
+              handle: headline
               field:
                 input_type: text
                 antlers: false
@@ -235,7 +260,8 @@ fields:
                 type: text
                 icon: text
                 listable: hidden
-            - handle: form_embed
+            -
+              handle: form_embed
               field:
                 antlers: true
                 display: 'Form Embed'
@@ -245,7 +271,8 @@ fields:
         form:
           display: Form
           fields:
-            - handle: light_mode
+            -
+              handle: light_mode
               field:
                 default: true
                 display: 'Light Mode'
@@ -253,7 +280,8 @@ fields:
                 icon: toggle
                 listable: hidden
                 instructions_position: above
-            - handle: content
+            -
+              handle: content
               field:
                 always_show_set_button: false
                 buttons:
@@ -283,7 +311,8 @@ fields:
                 icon: bard
                 listable: hidden
                 instructions_position: above
-            - handle: form
+            -
+              handle: form
               field:
                 antlers: true
                 display: Form
@@ -294,11 +323,12 @@ fields:
                 default: '{{ partial src="sets/forms/stacked-form" }}'
         horizontal_rule:
           display: 'Horizontal Rule'
-          fields: {}
+          fields: {  }
         image:
           display: Image
           fields:
-            - handle: image
+            -
+              handle: image
               field:
                 mode: list
                 container: assets
@@ -311,7 +341,8 @@ fields:
                 type: assets
                 icon: assets
                 listable: hidden
-            - handle: image_alignment
+            -
+              handle: image_alignment
               field:
                 options:
                   left: Left
@@ -322,7 +353,8 @@ fields:
                 icon: button_group
                 listable: hidden
                 width: 50
-            - handle: include_shadow
+            -
+              handle: include_shadow
               field:
                 default: false
                 display: 'Include Shadow'
@@ -332,7 +364,8 @@ fields:
                 listable: hidden
                 instructions_position: above
                 width: 50
-            - handle: animate_image
+            -
+              handle: animate_image
               field:
                 default: false
                 display: 'Animate Image'
@@ -341,7 +374,8 @@ fields:
                 width: 50
                 listable: hidden
                 instructions_position: above
-            - handle: animation_speed
+            -
+              handle: animation_speed
               field:
                 options:
                   fast: Fast
@@ -363,7 +397,8 @@ fields:
         html:
           display: HTML
           fields:
-            - handle: html_code
+            -
+              handle: html_code
               field:
                 antlers: true
                 display: 'HTML code'
@@ -381,14 +416,16 @@ fields:
       previews: true
       antlers: false
       remove_empty_nodes: false
-  - handle: dark_mode
+  -
+    handle: dark_mode
     field:
       type: toggle
       listable: hidden
       display: 'Dark Mode?'
       instructions: 'Inverts the block to be dark background and light text.'
       width: 50
-  - handle: column_vertical_alignment
+  -
+    handle: column_vertical_alignment
     field:
       options:
         top: Top
@@ -405,48 +442,60 @@ fields:
       display: 'Column Vertical Alignment'
       instructions: 'Allows you to place the content at different positions within the block.'
       width: 50
-  - handle: swap_order_of_columns
+  -
+    handle: swap_order_of_columns
     field:
       type: toggle
       listable: hidden
       display: 'Swap Order of Columns'
       instructions: 'The toggle swaps the order of columns on tablet & desktop, allows for creative layouts on tablet and desktop. Column Left becomes Column Right and vise versa.'
       width: 50
-  - handle: animate_image
+  -
+    handle: animate_image
     field:
       display: 'Animate Image'
       type: toggle
       icon: toggle
       width: 50
       listable: hidden
-  - handle: background_color
+  -
+    handle: background_color
     field:
       colors:
-        - label: White
+        -
+          label: White
           value:
             - '#ffffff'
-        - label: Black
+        -
+          label: Black
           value:
             - '#222222'
-        - label: Peach
+        -
+          label: Peach
           value:
             - '#F8ECE5'
-        - label: 'Light Brown'
+        -
+          label: 'Light Brown'
           value:
             - '#6d5b57'
-        - label: Brown
+        -
+          label: Brown
           value:
             - '#543A34'
-        - label: Gold
+        -
+          label: Gold
           value:
             - '#e2c064'
-        - label: Pink
+        -
+          label: Pink
           value:
             - '#ECC5BF'
-        - label: Mint
+        -
+          label: Mint
           value:
             - '#B2BC9C'
-        - label: Ivory
+        -
+          label: Ivory
           value:
             - '#F1ECE6'
       display: 'Background Color'
@@ -457,34 +506,44 @@ fields:
       instructions_position: above
       visibility: visible
       always_save: false
-  - handle: text_color
+  -
+    handle: text_color
     field:
       colors:
-        - label: White
+        -
+          label: White
           value:
             - '#ffffff'
-        - label: Black
+        -
+          label: Black
           value:
             - '#222222'
-        - label: Peach
+        -
+          label: Peach
           value:
             - '#F8ECE5'
-        - label: 'Light Brown'
+        -
+          label: 'Light Brown'
           value:
             - '#6d5b57'
-        - label: Brown
+        -
+          label: Brown
           value:
             - '#543A34'
-        - label: Gold
+        -
+          label: Gold
           value:
             - '#e2c064'
-        - label: Pink
+        -
+          label: Pink
           value:
             - '#ECC5BF'
-        - label: Mint
+        -
+          label: Mint
           value:
             - '#B2BC9C'
-        - label: Ivory
+        -
+          label: Ivory
           value:
             - '#F1ECE6'
       display: 'Text Color'
@@ -492,7 +551,8 @@ fields:
       icon: color
       listable: hidden
       width: 50
-  - handle: spacing_above_columns
+  -
+    handle: spacing_above_columns
     field:
       options:
         3: S
@@ -513,7 +573,8 @@ fields:
       width: 50
       listable: hidden
       instructions_position: above
-  - handle: spacing_below_columns
+  -
+    handle: spacing_below_columns
     field:
       options:
         3: S
@@ -534,7 +595,8 @@ fields:
       width: 50
       listable: hidden
       instructions_position: above
-  - handle: padding_above_columns
+  -
+    handle: padding_above_columns
     field:
       options:
         3: S
@@ -555,7 +617,8 @@ fields:
       width: 50
       listable: hidden
       instructions_position: above
-  - handle: padding_below_columns
+  -
+    handle: padding_below_columns
     field:
       options:
         3: S
@@ -576,3 +639,24 @@ fields:
       width: 50
       listable: hidden
       instructions_position: above
+  -
+    handle: gradient_background
+    field:
+      options:
+        gold: Gold
+        rust: Rust
+        pink: Pink
+        green: Green
+      multiple: false
+      clearable: true
+      searchable: true
+      taggable: false
+      push_tags: false
+      cast_booleans: false
+      display: 'Gradient Background'
+      type: select
+      icon: select
+      listable: hidden
+      instructions_position: above
+      visibility: visible
+      always_save: false
